--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,18 @@
-services:
-  nginx:
-    image: nginx:alpine
-    container_name: nginx-proxy
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    ports:
-      - "80:80"
-    depends_on:
-      - calculadora
-      - mortystock
-    networks:
-      - app-network
+version: "3.3"
 
+services:
   calculadora:
-    image: calculadora-precificacao
+    build:
+      context: .
     container_name: calculadora-container
-    expose:
-      - "5200"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.calculadora.rule=Host(`calculadoraprecificacao.mosetech.com.br`)"
+      - "traefik.http.routers.calculadora.entrypoints=websecure"
+      - "traefik.http.routers.calculadora.tls.certresolver=myresolver"
     networks:
-      - app-network
+      - traefik_network
 
 networks:
-  app-network:
-    driver: bridge
+  traefik_network:
+    external: true
